# slime-simulation

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: slime.wgsl
src/: main.rs
